# Nexus_EduV3

./: .gitignore  DEPLOY_VERCEL_PASSO_A_PASSO.md  DIAGNOSTICO_LOGIN.md  ERRO_DEPLOY_VERCEL.md  PROBLEMA_LOGIN_CADASTRO.md  PUBLICACAO_VERCEL.md  PUBLICAR_VERCEL.md  QUICK_START_VERCEL.md  README.md  RESUMO_PUBLICACAO.md
Back-end/: .env.example  .gitignore  .vercelignore  ANALISE_COMPLETA_FUNCTION_INVOCATION_FAILED.md  CHECKLIST_RECRIAR_PROJETO.md  COMO_CONFIGURAR_CORS_ORIGINS.md  COMO_OBTER_SUPABASE_KEY.md  CONFIGURACAO.md  DIAGNOSTICO_ERRO.md  DIAGNOSTICO_ULTIMATIVO.md  GUIA_DIAGNOSTICO_VERCEL.md  GUIA_PASSO_A_PASSO_RECRIAR.md  LIMITE_DEPLOY_VERCEL.md  NÃO_DESISTA.md  PROBLEMA_CRITICO_UV_NAO_INSTALA.md  README.md  SOLUCAO_CRITICA_CRASH_ANTES_DO_CODIGO.md  SOLUCAO_DEFINITIVA_FINAL.md  SOLUCAO_DEFINITIVA_FUNCTION_INVOCATION_FAILED.md  SOLUCAO_ERROS_VERCEL.md  SOLUCAO_FINAL_REQUIREMENTS.txt  SOLUCAO_MODULE_NOT_FOUND.md  TROUBLESHOOTING_VERCEL.md  VARIAVEIS_AMBIENTE.md  VERCEL_REQUIREMENTS_FIX.md  VERIFICAR_FUNCTION_LOGS.md  VERIFICAR_LOGS_BUILD.md  VERIFICAR_LOGS_DETALHADOS.md  VERIFICAR_PROJETO_RECRIADO.md  VERIFICAR_ROOT_DIRECTORY.md  config.py  database.py  gerar-jwt-key-openssl.ps1  gerar-jwt-key.ps1  gerar-jwt-key.py  main.py  middleware.py  models.py  pyproject.toml  requirements.txt  (+1 more)
Back-end/api/: index.py  requirements.txt  test_handler.py
Back-end/routes/: analysis.py  auth.py
Back-end/services/: analysis_service.py  auth_service.py  groq_service.py  pdf_service.py
Front-end/: .vercelignore  README.md  index.html  package.json
Front-end/src/: App.jsx
(+22 files in other folders)
